<resources>
    <string name="error_auth">Произошла ошибка при авторизации.\nНеобходимо произвести повторную авторизацию.</string>
    <string name="error_banned">Ваш аккаунт заблокирован.\nСвяжитесь с диспетчерской или войдите с помощью другого номера.</string>
    <string name="error_io">Не удалось соединитьяся с сервером.\nПроверьте подключение и повторите.</string>
    <string name="error_location">Недоступно ваше местоположение.\nПроверьте настройки и повторите.</string>
    <string name="error_unconfirmed">Вас пока не допустили к работе.</string>
    <string name="error_unbinding">Ошибка при удалении карты</string>
    <string name="error_debt_closing_no_debts">Все задолженности погашены.</string>
    <string name="error_card_not_found">Не найдена указанная карта</string>
    <string name="error_orders_not_found">У вас нет ни одной поездки</string>
    <string name="error_payment_not_found">Не найдена информация о платеже</string>
    <string name="error_no_money">Недостаточно средств</string>
    <string name="error_unknown">Произошла ошибка! (Код: %d)</string>
    <string name="error_order_creating">Произошла ошибка при создании заказа (%d)</string>
    <string name="error_binding">Произошла ошибка при привязке карты</string>
    <string name="error_cards_loading">Произошла ошибка при загрузке карт.</string>
    <string name="error_debt_closing">Ошибка при закрытии задолженности.</string>
    <string name="error_debt_closing_code">Ошибка при закрытии задолженности. (%d)</string>
    <string name="error_debt_loading">Ошибка при загрузке задолженности</string>
    <string name="mask_balance">Баланс: %1$.2f ₽</string>
    <string name="mask_card">Карта %s</string>
    <string name="mask_distance">%1$.2f КМ</string>
    <string name="mask_price">%d₽</string>
    <string name="mask_price_add">+%d₽</string>
    <string name="mask_price_empty">%s ₽</string>
    <string name="mask_rating">Рейтинг: %1$.2f</string>
    <string name="message_card_binding_success">Карта успешно добавлена!</string>
    <string name="hint_auth_phone">Введите ваш номер</string>
    <string name="btn_auth_to_verification">Продолжить</string>
    <string name="text_start_passenger_where_to">Куда едем?</string>
    <string name="btn_address_typing_favorited">Избранные адреса</string>
    <string name="btn_address_typing_select_on_map">Выбрать адрес на карте</string>
    <string name="text_suggestions_empty">Соответствий не найдено</string>
    <string name="title_profile_passenger">Ваш профиль</string>
    <string name="tv_header_profile_info">Информация</string>
    <string name="tv_header_settings">Настройки</string>
    <string name="tv_profile_rating">Рейтинг: %1$.2f</string>
    <string name="btn_profile_edit">Редактировать</string>
    <string name="tv_profile_cards">Банковские карты</string>
    <string name="tv_profile_favorited_addresses">Избранные адреса</string>
    <string name="tv_profile_rides_history">История поездок</string>
    <string name="btn_profile_sign_out">Выйти из аккаунта</string>
    <string name="title_address_typing">Ввод адреса</string>
    <string name="title_order_details">Заказ</string>
    <string name="title_address_selecting">Выберите точку на карте</string>
    <string name="btn_address_selecting_select">Выбрать точку</string>
    <string name="title_favorited_addresses">Избранные адреса</string>
    <string name="et_address_typing_address_hint">Город, улица, дом</string>
    <string name="tv_header_favorited_home">Домашний адрес</string>
    <string name="btn_favorited_home">Нажмите, чтобы добавить домашний адрес</string>
    <string name="tv_header_favorited_work">Рабочий адрес</string>
    <string name="btn_favorited_work">Нажмите, чтобы добавить рабочий адрес</string>
    <string name="tv_header_favorited_other">Остальные адреса</string>
    <string name="btn_favorited_add_new">Добавить адрес</string>
    <string name="title_payment_type">Способы оплаты</string>
    <string name="btn_payment_type_add_new">Добавить карту</string>
    <string name="message_payment_type_change_in_process">Меняем способ оплаты, подождите</string>
    <string name="title_profile_edit">Редактировать</string>
    <string name="tv_header_profile_edit_name_last">Ваша фамилия</string>
    <string name="et_profile_edit_name_last_hint">Введите вашу фамилию</string>
    <string name="tv_header_profile_edit_name_first">Ваше имя</string>
    <string name="et_profile_edit_name_first_hint">Введите ваше имя</string>
    <string name="tv_header_profile_edit_gender">Ваш пол</string>
    <string name="btn_profile_edit_save">Cохранить</string>
    <string name="title_order_history">История заказов</string>
    <string name="btn_order_setup_confirm">Вызвать</string>
    <string name="hint_auth_code">Введите код из СМС</string>
    <string name="btn_auth_to_verification_driver">Продолжить как водитель</string>
    <string name="tv_auth_code_hint">На номер %s отправлен код</string>
    <string name="tv_header_reg_passanger_name_first">Ваше имя</string>
    <string name="et_reg_passenger_last_hint">Введите вашу фамилию</string>
    <string name="et_reg_passenger_first_hint">Введите ваше имя</string>
    <string name="tv_header_reg_passenger_gender">Укажите ваш пол</string>
    <string name="btn_reg_passenger_save">Сохранить и продолжить</string>
    <string name="title_reg_passenger">Регистрация пассажира</string>
    <string name="btn_reg_passenger_upload_photo">Загрузить фотографию</string>
    <string name="tv_header_reg_passenger_upload_photo">Загрузите свою фотографию (необязательно)</string>
    <string name="tv_header_reg_passanger_name_last">Ваша фамилия</string>
    <string name="tv_header_reg_driver_name_first">Ваше имя</string>
    <string name="et_reg_driver_first_hint">Введите ваше имя</string>
    <string name="tv_header_reg_driver_name_last">Ваша фамилия</string>
    <string name="et_reg_driver_last_hint">Введите вашу фамилию</string>
    <string name="tv_header_reg_driver_gender">Укажите ваш пол</string>
    <string name="tv_header_reg_driver_upload_photo">Загрузите свою фотографию</string>
    <string name="btn_reg_driver_upload_photo">Загрузить фотографию</string>
    <string name="btn_reg_driver_save">Сохранить и продолжить</string>
    <string name="btn_reg_driver_upload_license">Загрузите удостоверение</string>
    <string name="tv_header_reg_driver_upload_license">Загрузите ваше водительское удостоверение</string>
    <string name="title_reg_driver">Регистрация водителя</string>
    <string name="et_reg_driver_car_model">Ford Focus</string>
    <string name="tv_header_reg_driver_car_model">Укажите модель вашего автомобиля</string>
    <string name="tv_header_reg_driver_car_license_plate">Укажите номер вашего автомобиля</string>
    <string name="et_reg_driver_car_license_plate">А000АА06</string>
    <string name="title_profile_driver">Ваш профиль</string>
    <string name="tv_header_profile_edit_driver_car_model">Укажите модель вашего автомобиля</string>
    <string name="et_profile_edit_driver_car_model">Ford Focus</string>
    <string name="tv_header_profile_edit_driver_car_license_plate">Укажите номер вашего автомобиля</string>
    <string name="et_profile_edit_driver_car_license_plate">А000АА00</string>
    <string name="text_driver_orders_empty">Нет доступных для выбора поездок.</string>
    <string name="btn_start_driver_orders_empty_reload">Обновить</string>
    <string name="title_start_driver">Заказы</string>
    <string name="title_order_details_driver">О заказе</string>
    <string name="tv_header_odrder_details_address_from">Точка отправления</string>
    <string name="tv_header_odrder_details_address_to">Точка прибытия</string>
    <string name="tv_header_odrder_details_passenger">О пассажире</string>
    <string name="btn_order_details_driver_passenger_call">Позвонить</string>
    <string name="tv_order_details_driver_passenger_name_first">Нет данных</string>
    <string name="tv_order_details_driver_passenger_name_last">Нет данных</string>
    <string name="tv_order_details_driver_passenger_empty">Не удалось получить данные пассажира.</string>
    <string name="tv_order_details_driver_from">Нет данных</string>
    <string name="tv_order_details_driver_to">Нет данных</string>
    <string name="btn_order_details_driver_confirm">Взять заказ</string>
    <string name="tv_header_odrder_details_price">Стоимость заказа</string>
    <string name="tv_order_details_driver_price">Нет данных</string>
    <string name="tv_order_details_driver_price_mask">%d₽</string>
    <string name="tv_order_details_driver_distance">Нет данных</string>
    <string name="tv_order_details_driver_distance_mask">%1$.2fкм</string>
    <string name="tv_header_odrder_details_distance">Длина маршрута</string>
    <string name="text_order_history_passenger_empty_orders">Вы пока не соврешили ни одной поездки</string>
    <string name="text_order_history_passenger_error">Во время загрузки истории произошла ошибка</string>
    <string name="text_order_history_passenger_error_reload">Перезагрузить</string>
    <string name="text_address_select_select">Выбрать точку</string>
    <string name="text_order_setup_from">Точка отправления</string>
    <string name="text_order_setup_to">Точка прибытия</string>
    <string name="btn_order_setup_add_comments">Добавить пожелания</string>
    <string name="tv_header_order_comments_options">Опции</string>
    <string name="tv_order_comments_options_animals">С животным</string>
    <string name="tv_order_comments_options_child">С детским креслом</string>
    <string name="tv_header_order_comments_comment">Комментарий</string>
    <string name="et_order_comments_comment_hint">Введите ваш комментарий</string>
    <string name="btn_order_comments_save">Сохранить</string>
    <string name="title_order_comments">Комментарии</string>
    <string name="text_order_progress_passenger_search_for_driver">Пожалуйста, подождите.\nМы ищем водителя.</string>
    <string name="text_order_progress_passenger_cancel_order">Отменить</string>
    <string name="text_order_progress_passenger_in_progress">Вы в пути</string>
    <string name="text_order_progress_passenger_driver_found">Водитель откликнулся.\nОжидайте в точке отправления.</string>
    <string name="text_order_progress_passenger_arrived">Водитель на месте.</string>
    <string name="tv_header_order_details_action">Следующее действие</string>
    <string name="btn_order_details_driver_start_waiting">Начать ожидание</string>
    <string name="btn_order_details_driver_start_diving">Начать поездку</string>
    <string name="btn_order_details_driver_finish_driving">Завершить поездку</string>
    <string name="title_dialog_order_closed">Вы закончили поездку</string>
    <string name="message_dialog_order_closed">Вы успешно завершили поездку и будете перенапралены на главный экран.</string>
    <string name="text_order_progress_rating">Вы можете оценить поездку</string>
    <string name="btn_in_progress_rating_post">Отправить</string>
    <string name="text_order_progress_passenger_ended">Поездка окончена.</string>
    <string name="title_profile_passenger_dialog">Удалить фото</string>
    <string name="message_dialog_profile_passenger">У вас уже установлена фотография. Вы хотите ее удалить?</string>
    <string name="tv_header_reg_driver_car_color">Укажите цвет автомобиля</string>
    <string name="et_reg_driver_car_color">Черный</string>
    <string name="header_summary_price">К оплате</string>
    <string name="btn_continue">Продолжить</string>
    <string name="header_card_num">Номер карты</string>
    <string name="header_card_exp">Действует до</string>
    <string name="header_card_cvv">CVV</string>
    <string name="header_card_own">Владелец (как на карте)</string>
    <string name="hint_card_own">IVAN IVANOV</string>
    <string name="btn_payment_pos">Деньги получены</string>
    <string name="btn_payment_neg">Отказ в оплате</string>
    <string name="header_payment_method">Способ оплаты</string>
</resources>