<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header_reg_driver_name_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_header_reg_driver_name_first"
                android:theme="@style/AppTheme.TextView.Header"/>

            <EditText
                android:id="@+id/et_reg_driver_name_first"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_reg_driver_first_hint"
                android:inputType="textPersonName|textCapWords"/>

            <TextView
                android:id="@+id/tv_header_reg_driver_name_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_header_reg_driver_name_last"
                android:theme="@style/AppTheme.TextView.Header"/>

            <EditText
                android:id="@+id/et_reg_driver_name_last"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_reg_driver_last_hint"
                android:inputType="textPersonName|textCapWords"/>

            <TextView
                android:id="@+id/tv_header_reg_driver_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_header_reg_driver_car_model"
                android:theme="@style/AppTheme.TextView.Header"/>

            <EditText
                android:id="@+id/et_reg_driver_car_model"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_reg_driver_car_model"
                android:inputType="textPersonName|textCapWords"/>

            <TextView
                android:id="@+id/tv_header_reg_driver_car_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_header_reg_driver_car_color"
                android:theme="@style/AppTheme.TextView.Header"/>

            <EditText
                android:id="@+id/et_reg_driver_car_color"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_reg_driver_car_color"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/tv_header_reg_driver_car_license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_header_reg_driver_car_license_plate"
                android:theme="@style/AppTheme.TextView.Header"/>

            <EditText
                android:id="@+id/et_reg_driver_license_plate"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_reg_driver_car_license_plate"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/btn_reg_driver_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/btn_reg_driver_save"
                android:theme="@style/AppTheme.TextView.Clickable.Button"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>