<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:ignore="LabelFor">

    <include layout="@layout/layout_appbar" />

    <TextView
        android:id="@+id/header_card_num"
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_card_num" />

    <EditText
        android:id="@+id/et_card_num"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|textNoSuggestions" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_card_exp"
            style="@style/AppTheme.TextView.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/header_card_exp" />

        <TextView
            android:id="@+id/header_card_cvv"
            style="@style/AppTheme.TextView.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/header_card_cvv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_card_expiration"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|textNoSuggestions" />

        <EditText
            android:id="@+id/et_card_cvv"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|textNoSuggestions" />

    </LinearLayout>

    <TextView
        android:id="@+id/header_card_owner"
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_card_own" />

    <EditText
        android:id="@+id/et_card_owner"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_card_own"
        android:inputType="textNoSuggestions"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/btn_bind_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_continue"
        android:theme="@style/AppTheme.TextView.Clickable.Button" />

</LinearLayout>